...
         */
        fun demo(context: Context): AppDatabase =
            DEMO ?: synchronized(this) {
                DEMO ?: Room.databaseBuilder(
                    context.applicationContext,
                    AppDatabase::class.java,
                    "crosstraining-demo.db"
                )
                .addMigrations(MIGRATION_1_2, MIGRATION_2_3, MIGRATION_3_4, MIGRATION_4_5, MIGRATION_5_6, MIGRATION_6_7, MIGRATION_7_8, MIGRATION_8_9, MIGRATION_9_10)
                .fallbackToDestructiveMigrationOnDowngrade()
                .build().also { DEMO = it }
            }

...
                }
            }

            database = Room.databaseBuilder(
                context.applicationContext,
                AppDatabase::class.java,
                "crosstraining.db"
            )
            .addMigrations(MIGRATION_1_2, MIGRATION_2_3, MIGRATION_3_4, MIGRATION_4_5, MIGRATION_5_6, MIGRATION_6_7, MIGRATION_7_8, MIGRATION_8_9, MIGRATION_9_10)
            .fallbackToDestructiveMigrationOnDowngrade()
            .addCallback(callback)
            .build()

...
